--- a/datasets/Part_5_Boltzmann_Machines_BM/rbm.ipynb
+++ b/datasets/Part_5_Boltzmann_Machines_BM/rbm.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "# Preparar el conjunto de entrenamiento y elconjunto de testing\n",
     "training_set = pd.read_csv(\"ml-100k/u1.base\", sep = \"\\t\", header = None) #base significa entrenamiento\n",
-    "training_set = np.array(training_set, dtype = \"int\") #para pytorch lo pasamos a matriz, no trabaja con vectores\n",
+    "training_set = np.array(training_set, dtype = \"int\") #para pytorch pasamos el dataframe de pandas a array\n",
     "test_set = pd.read_csv(\"ml-100k/u1.test\", sep = \"\\t\", header = None)\n",
     "test_set = np.array(test_set, dtype = \"int\")"
    ]
@@ -251,8 +251,8 @@
     "nb_epoch = 10 #nº de epocas-iteraciones\n",
     "\n",
     "for epoch in range(1, nb_epoch+1):\n",
-    "    training_loss = 0 #perdidas para medir el error(usando mean)\n",
-    "    s = 0. #observaciones predichas en decimal\n",
+    "    training_loss = 0 #perdidas para medir la cantidad de errores en el entrenamiento(usando mean)\n",
+    "    s = 0. #Cuantos usuarios calificaron al menos una pelicula, en decimal\n",
     "    \n",
     "    #bucle para obteener los lotes de usuarios de 100 en 100\n",
     "    for id_user in range(0, nb_users - batch_size, batch_size):\n",
