--- a/datasets/Part_6_AutoEncoders_AE/ae.ipynb
+++ b/datasets/Part_6_AutoEncoders_AE/ae.ipynb
@@ -43,10 +43,10 @@
    "outputs": [],
    "source": [
     "# Preparar el conjunto de entrenamiento y elconjunto de testing\n",
-    "training_set = pd.read_csv(\"ml-100k/u1.base\", sep = \"\\t\", header = None)\n",
-    "training_set = np.array(training_set, dtype = \"int\")\n",
-    "test_set = pd.read_csv(\"ml-100k/u1.test\", sep = \"\\t\", header = None)\n",
-    "test_set = np.array(test_set, dtype = \"int\")"
+    "training_set = pd.read_csv(\"ml-100k/u1.base\", sep = \"\\t\", header = None) #base=trainig\n",
+    "training_set = np.array(training_set, dtype = \"int\") #para pytorch pasamos el dataframe de pandas a array\n",
+    "test_set = pd.read_csv(\"ml-100k/u1.test\", sep = \"\\t\", header = None) #test=test\n",
+    "test_set = np.array(test_set, dtype = \"int\") #pasamos el dataframe a formato array"
    ]
   },
   {
@@ -62,22 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Obtener el número de usuarios y de películas\n",
-    "nb_users = int(max(max(training_set[:, 0]), max(test_set[:,0])))\n",
-    "nb_movies = int(max(max(training_set[:, 1]), max(test_set[:, 1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertir los datos en un array X[u,i] con usuarios u en fila y películas i en columna\n",
+    "# Convertir los datos en un array X[u,i] con usuarios 'u' en fila y películas 'i' en columna\n",
     "def convert(data):\n",
     "    new_data = []\n",
     "    for id_user in range(1, nb_users+1):\n",
@@ -110,24 +99,42 @@
    "outputs": [],
    "source": [
     "# Crear la arquitectura de la Red Neuronal\n",
-    "class SAE(nn.Module):\n",
-    "    def __init__(self, ):\n",
-    "        super(SAE, self).__init__()\n",
-    "        self.fc1 = nn.Linear(nb_movies, 20)\n",
+    "class SAE(nn.Module): #clase que herada de otra clase Module, siendo 'nn' el paquete de Pytorch donde se encuentra\n",
+    "    def __init__(self, ): #constructor de la clase\n",
+    "        super(SAE, self).__init__() #llamaos al constructor del padre usando super(...).__init__()\n",
+    "        \n",
+    "        #deinifmos los AutoEncoders apilados que consistira en codificar los datos de entrada\n",
+    "        #pasar de 20 neuronas a 10 (codificacion) y de 10 a 20 otra vez(decodificacion):\n",
+    "        \n",
+    "        #full connection(fc), capa de entrada con nb_movies numero de neuronas y \n",
+    "        #con capa oculta 20 caracteristicas-neuronas \n",
+    "        self.fc1 = nn.Linear(nb_movies, 20) \n",
+    "        #Otra fc capa oculta que conectara la capa anterior (que tenia 20) y le ponemos una salida\n",
+    "        #de 10 neuronas de salida (codificacion)\n",
     "        self.fc2 = nn.Linear(20, 10)\n",
+    "        #lo mismo de arriba que conecta las 10 neuronas de arriba con 20 en otra capa oculta que ponemos\n",
     "        self.fc3 = nn.Linear(10, 20)\n",
+    "        #lo mismo, conectamos las 20 neuronas de salida de fc3 a la capa de salida con nb_movies-neuronas\n",
     "        self.fc4 = nn.Linear(20, nb_movies)\n",
-    "        self.activation = nn.Sigmoid()\n",
-    "    def forward(self, x):\n",
-    "        x = self.activation(self.fc1(x))\n",
+    "        \n",
+    "        #funcion de activacion que indicara el umbral para que se activen las neuronas\n",
+    "        self.activation = nn.Sigmoid() \n",
+    "    \n",
+    "    #funcion donde la info fluira desde la codificacion a la descodificacion\n",
+    "    #self para usar la variables del contructor de la clase y 'x' indicara los datos\n",
+    "    def forward(self, x): \n",
+    "        x = self.activation(self.fc1(x)) #codificacion pasado por la funcion de activacion\n",
     "        x = self.activation(self.fc2(x))\n",
     "        x = self.activation(self.fc3(x))\n",
-    "        x = self.fc4(x)\n",
+    "        x = self.fc4(x) #queremos el valor de la pelicula, ya no hace falta meter la funcion de activacion\n",
     "        return x\n",
     "\n",
-    "sae = SAE()\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = optim.RMSprop(sae.parameters(), lr = 0.01, weight_decay = 0.5)"
+    "sae = SAE() #creamos un objeto de la clase SAE()\n",
+    "criterion = nn.MSELoss() #criterio de optimizacion(error) usando el error cuadrado medio (MSE) para que el entrenamiento suceda\n",
+    "#optimizador usando RMS(tambien se podría usar el Adam)\n",
+    "#lr=learning rate(tasa de aprendizaje)\n",
+    "#weight_decay para ajustar el lr\n",
+    "optimizer = optim.RMSprop(sae.parameters(), lr = 0.01, weight_decay = 0.5) "
    ]
   },
   {
@@ -345,15 +352,27 @@
    "source": [
     "# Entrenar el SAE\n",
     "nb_epoch = 200\n",
-    "for epoch in range(1, nb_epoch+1):\n",
-    "    train_loss = 0\n",
-    "    s = 0.\n",
-    "    for id_user in range(nb_users):\n",
-    "        input = Variable(training_set[id_user]).unsqueeze(0)\n",
-    "        target = input.clone()\n",
-    "        if torch.sum(target.data > 0) > 0:\n",
+    "for epoch in range(1, nb_epoch+1): #bucle para recorrer cada la red 200 veces\n",
+    "    \n",
+    "    train_loss = 0 #perdidas para medir la cantidad de errores en el entrenamiento(usando mean)\n",
+    "    s = 0. #Cuantos usuarios calificaron al menos una pelicula, en decimal\n",
+    "    \n",
+    "    for id_user in range(nb_users): #bucle para recorrer los usuarios\n",
+    "        \n",
+    "        #vector de entrada(valoraciones de cada usuario), al dar un vector de un elemento...\n",
+    "        #pero pythorch o keras exige introducir un array con mas de un elemento(variable().unsqueeze(0))\n",
+    "        #añadimos una dimesion 'falsa'\n",
+    "        input = Variable(training_set[id_user]).unsqueeze(0) \n",
+    "        \n",
+    "        #hacemos una copia de input(el vector de entrada para poder medir al final el error en funcion de la prevision\n",
+    "        target = input.clone() \n",
+    "        if torch.sum(target.data > 0) > 0: #para calificar usuarios que hayan calificado alguna pelicula (0 seria ninguna)\n",
+    "            \n",
+    "            #salida de la red para los pronosticos pasando por las capas creadas antes en SAE()\n",
     "            output = sae.forward(input)\n",
+    "            #para ignorar el gradiente descendiente\n",
     "            target.require_grad = False\n",
+    "            #solo queremos aplicar el gradiente descenente el target a predecir es 0\n",
     "            output[target == 0] = 0\n",
     "            loss = criterion(output, target)\n",
     "            # la media no es sobre todas las películas, sino sobre las que realmente ha valorado\n",
